# hivemind

./: .gitignore  ALL_BUILD.txt  CMakeLists.txt  LICENSE  README.md  struct_hivemind.txt
docs/: getting_started.md  index.md
docs/.obsidian/: workspace.json
docs/api/: hivemind.md
docs/examples/: messenger.md
include/hivemind/: hivemind.h
src/: hivemind.cpp  main.cpp
src/Templates/: BinaryTree.hpp
src/core/: Hivemind.cpp  Hivemind.hpp
src/crypto/: Crypto.cpp  Crypto.hpp
src/network/: BeaconClient.cpp  BeaconClient.hpp  BeaconServer.cpp  PacketManager.cpp  PacketManager.hpp  Stun.cpp  Stun.hpp  Transport.cpp  Transport.hpp  UPnP.cpp  UPnP.hpp
src/storage/: SimpleRegistry.cpp  SimpleRegistry.hpp  UserRegistry.cpp  UserRegistry.hpp
